--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,11 @@ h5{
     }
     /*Code pour le css du parallax fin*/
 
+.text-bold{
+    font-weight: bold;
+}
+
+
 .timeline-principal{
     border-right: 3px solid #000;
     padding: 50px 10px 50px 0px;
